Fix animation scaling and jank issues on mobile phones

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ html, body {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   z-index: 0;
   display: block;
   pointer-events: none;
@@ -153,7 +153,7 @@ html, body {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   z-index: 2;
   display: flex;
   flex-direction: column;
